fixed dark mode

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,14 +26,15 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+.settings button {
+  color: white;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: black;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -45,26 +46,13 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
 .output{
   flex-grow: 1;
   background-color: lightgray;
 }
 
 .settings{
-  background-color:antiquewhite;
+  background-color: #242424;
   flex-grow: 1;
 }
 
@@ -75,6 +63,7 @@ button:focus-visible {
   align-items: center;
   margin-inline: 20px;
   padding: 20px;
+  color: black;
 }
 
 .resume > div{
@@ -99,3 +88,20 @@ button:focus-visible {
   margin-top: 10px;
 }
 
+/*@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+
+  .settings{
+    background-color:antiquewhite;
+    flex-grow: 1;
+  }
+}*/
